plot ref updated

--- a/csvs/make_csv.ipynb
+++ b/csvs/make_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "id": "5c1db941",
    "metadata": {},
    "outputs": [],
@@ -41,37 +41,12 @@
     "9. Toluene\n",
     "10. Uracil\n",
     "\n",
-    "For **QM9** dataset, the MAEs will be always in the follwoing order: \n",
-    "1.  $\\mu$  \n",
-    "2.  $\\alpha$  \n",
-    "3.  $\\epsilon_{\\text{HOMO}}$  \n",
-    "4.  $\\epsilon_{\\text{LUMO}}$  \n",
-    "5.  $\\Delta \\epsilon$  \n",
-    "6.  $\\langle R^2 \\rangle$  \n",
-    "7.  $\\text{ZPVE}$  \n",
-    "8.  $U_0$  \n",
-    "9.  $U$  \n",
-    "10. $H$  \n",
-    "11. $G$  \n",
-    "12. $c_v$\n",
-    "\n",
-    "If analysis for a molcule for particular ML archetecture is missing, then it will be marked by '**-1**'."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "502b44ff",
-   "metadata": {},
-   "source": [
-    "Poitns to be remebered\n",
-    "1. For MD17 , training size is <b>1000</b> datasets (950/50).\n",
-    "2. Data from <b>original</b> paper.\n",
-    "3. <b>Rounding</b> of MAEs."
+    "If the analysis of a molecule for a particular ML architecture is missing, it is marked as '**x**'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "id": "48d1f097",
    "metadata": {},
    "outputs": [],
@@ -81,17 +56,13 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.37,0.08,0.08,0.13,0.16,0.20,0.12,0.14],\n",
     "        'F': [1.35,0.31,0.39,0.66,0.58,0.85,0.57,0.56]\n",
-    "    },\n",
-    "    'QM9': {\n",
-    "        'unit': 'kcal/mol_D_A3',\n",
-    "        'mae': [0.033,0.035,0.945,0.784,1.453,0.020,0.039,0.323,0.438,0.323,0.323,0.033]\n",
     "    }\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
    "id": "c5a53677",
    "metadata": {},
    "outputs": [],
@@ -104,12 +75,12 @@
     "#     }\n",
     "# }\n",
     "\n",
-    "# MGCN have no data with MD17."
+    "# MGCN have no data with MD17 or rMD17."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
    "id": "edc9c42f",
    "metadata": {},
    "outputs": [],
@@ -119,17 +90,13 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.204,0.078,0.064,0.104,0.122,0.134,0.102,0.115],\n",
     "        'F': [0.499,0.187,0.230,0.383,0.215,0.374,0.216,0.301]\n",
-    "    },\n",
-    "    'QM9': {\n",
-    "        'unit': 'kcal/mol_D_A3',\n",
-    "        'mae': [0.030,0.007,0.567,0.450,0.752,0.093,0.028,0.146,0.145,0.151,0.174,0.023]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 128,
    "id": "be580a02",
    "metadata": {},
    "outputs": [],
@@ -139,17 +106,15 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.230,'x',0.059,0.094,0.142,0.126,0.100,0.108],\n",
     "        'F': [0.605,'x',0.160,0.319,0.310,0.337,0.191,0.218]\n",
-    "    },\n",
-    "    'QM9': {\n",
-    "        'unit': 'kcal/mol_D_A3',\n",
-    "        'mae': [0.053,0.009,0.759,0.570,0.980,0.214,0.032,0.188,0.192,0.194,0.217,0.028]\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "# Data taken from PaiNN paper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 129,
    "id": "bc698795",
    "metadata": {},
    "outputs": [],
@@ -175,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 130,
    "id": "81897487",
    "metadata": {},
    "outputs": [],
@@ -193,17 +158,13 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.159,'x',0.063,0.091,0.117,0.114,0.097,0.104],\n",
     "        'F': [0.371,'x',0.230,0.319,0.083,0.209,0.102,0.140]\n",
-    "    },\n",
-    "    'QM9': {\n",
-    "        'unit': 'kcal/mol_D_A3',\n",
-    "        'mae': [0.012,0.007,0.636,0.470,1.054,0.018,0.030,0.135,0.134,0.138,0.169,0.024]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 131,
    "id": "3d0df0d5",
    "metadata": {},
    "outputs": [],
@@ -219,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 132,
    "id": "e21d7b46",
    "metadata": {},
    "outputs": [],
@@ -235,18 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "id": "7b0f39a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "neqip_l0 = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.581,0.468,0.074,0.046,0.101,0.339,0.404,0.263,0.224,0.231],\n",
-    "    #     'F': [0.973,0.793,0.238,0.274,0.535,0.475,0.775,0.687,0.613,0.600]\n",
-    "    # }\n",
-    "        'rMD17': {\n",
+    "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [25.2,20.3, 3.2, 2.0, 4.4,14.7,17.5,11.4, 9.7,10.0],\n",
     "        'F': [42.2,34.4,10.3,11.9,23.2,20.6,33.6,29.8,26.6,26.0]\n",
@@ -254,12 +210,7 @@
     "}\n",
     "\n",
     "neqip_l1 = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal''kcal',\n",
-    "    #     'E': [0.088,0.025,0.002,0.023,0.037,0.009,0.048,0.023,0.012,0.014],\n",
-    "    #     'F': [0.291,0.104,0.009,0.150,0.238,0.048,0.214,0.131,0.060,0.095]\n",
-    "    # }\n",
-    "        'rMD17': {\n",
+    "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [ 3.8,1.1,0.09,1.0, 1.6,0.4,2.1,1.0,0.5,0.6],\n",
     "        'F': [12.6,4.5,0.4, 6.5,10.3,2.1,9.3,5.7,2.6,4.1]\n",
@@ -267,12 +218,7 @@
     "}\n",
     "\n",
     "neqip_l2 = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.055,0.018,0.001,0.012,0.021,0.007,0.032,0.018,0.007,0.009],\n",
-    "    #     'F': [0.196,0.076,0.009,0.081,0.136,0.032,0.136,0.097,0.042,0.067]\n",
-    "    # }\n",
-    "        'rMD17': {\n",
+    "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [2.4,0.8,0.06,0.5,0.9,0.3,1.4,0.8,0.3,0.4],\n",
     "        'F': [8.5,3.3,0.4, 3.5,5.9,1.4,5.9,4.2,1.8,2.9]\n",
@@ -280,11 +226,6 @@
     "}\n",
     "\n",
     "neqip_l3 = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.053,0.016,0.001,0.009,0.018,0.005,0.032,0.016,0.007,0.009],\n",
-    "    #     'F': [0.189,0.067,0.007,0.065,0.118,0.030,0.136,0.092,0.037,0.071]\n",
-    "    # }\n",
     "    'MD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [5.7,'x',2.2,3.3,4.9,4.6,4.0,4.5],\n",
@@ -300,33 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 134,
    "id": "ee4138f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "mace = {\n",
     "    'rMD17': {\n",
-    "        'unit': 'kcal',\n",
-    "        'E': [0.051,0.028,0.009,0.009,0.018,0.012,0.030,0.021,0.012,0.012],\n",
-    "        'F': [0.152,0.069,0.007,0.048,0.095,0.037,0.111,0.071,0.035,0.048]\n",
+    "        'unit': 'meV',\n",
+    "        'E': [2.2,1.2,0.4,0.4,0.8,0.5,1.3,0.9,0.5,0.5],\n",
+    "        'F': [6.6,3.0,0.3,2.1,4.1,1.6,4.8,3.1,1.5,2.1]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 135,
    "id": "5d5451b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "newtonnet = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.168,0.142,'x',0.078,0.096,0.118,0.135,0.115,0.094,0.107],\n",
-    "    #     'F': [0.348,0.138,'x',0.264,0.323,0.084,0.263,0.197,0.088,0.149]\n",
-    "    # },\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': [0.168,'x',0.078,0.096,0.118,0.115,0.094,0.107],\n",
@@ -337,17 +273,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 136,
    "id": "35b3a4c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "allegro = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.053,0.028,0.007,0.009,0.014,0.012,0.035,0.021,0.009,0.014],\n",
-    "    #     'F': [0.168,0.060,0.005,0.048,0.083,0.021,0.113,0.067,0.042,0.042]\n",
-    "    # }\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [2.3,1.2,0.3,0.4,0.6,0.5,1.5,0.9,0.4,0.6],\n",
@@ -358,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 137,
    "id": "91e7c7c0",
    "metadata": {},
    "outputs": [],
@@ -374,25 +305,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 138,
    "id": "bf444f4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fchl_19 = {\n",
-    "#     'MD17': {\n",
-    "#         'unit': 'kcal',\n",
-    "#         'E': [0.182,'x','x',0.054,0.081,0.117,'x',0.114,0.098,0.104],\n",
-    "#         'F': [0.478,'x','x',0.136,0.245,0.151,'x',0.221,0.203,0.105]\n",
-    "#     }\n",
-    "# } \n",
-    "\n",
     "fchl_19 = {\n",
-    "    # 'rMD17': {\n",
+    "    # 'MD17': { # Reference \n",
     "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.143,0.065,0.008,0.021,0.035,0.028,0.067,0.042,0.039,0.014],\n",
-    "    #     'F': [0.482,0.249,0.060,0.143,0.238,0.150,0.284,0.219,0.203,0.097]\n",
-    "    # }\n",
+    "    #     'E': [0.182,'x','x',0.054,0.081,0.117,'x',0.114,0.098,0.104],\n",
+    "    #     'F': [0.478,'x','x',0.136,0.245,0.151,'x',0.221,0.203,0.105]\n",
+    "    # },\n",
     "    'rMD17': { # original paper ?\n",
     "        'unit': 'meV',\n",
     "        'E': [ 6.2, 2.8,0.35,0.9, 1.5,1.2, 2.9,1.8,1.7,0.6],\n",
@@ -403,17 +326,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 139,
    "id": "72164cfa",
    "metadata": {},
    "outputs": [],
    "source": [
     "gap_soap = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.408,0.196,0.017,0.081,0.111,0.088,0.196,0.129,0.092,0.069],\n",
-    "    #     'F': [1.035,0.565,0.138,0.417,0.609,0.381,0.666,0.570,0.410,0.406]\n",
-    "    # }\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [17.7, 8.5,0.75, 3.5, 4.8, 3.8, 8.5, 5.6, 4.0, 3.0],\n",
@@ -424,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 140,
    "id": "44b1ca4b",
    "metadata": {},
    "outputs": [],
@@ -435,11 +353,6 @@
     "        'E': [0.19,0.092,0.07,0.10,0.12,0.12,0.10,0.11],\n",
     "        'F': [0.68,0.409,0.33,0.41,0.11,0.28,0.14,0.24]\n",
     "    },\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.166,0.099,0.001,0.055,0.071,0.018,0.115,0.048,0.023,0.032],\n",
-    "    #     'F': [0.733,0.443,0.018,0.369,0.434,0.125,0.537,0.295,0.145,0.240]\n",
-    "    # }\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [ 7.2, 4.3,0.06, 2.4, 3.1,0.8, 5.0, 2.1,1.0, 1.4],\n",
@@ -450,17 +363,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 141,
    "id": "188ac224",
    "metadata": {},
    "outputs": [],
    "source": [
     "ace = {\n",
-    "    # 'MD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.141,0.083,0.001,0.028,0.039,0.021,0.092,0.042,0.025,0.025],\n",
-    "    #     'F': [0.413,0.251,0.012,0.168,0.256,0.118,0.293,0.214,0.150,0.152]\n",
-    "    # }\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [ 6.1, 3.6,0.04,1.2, 1.7,0.9, 4.0,1.8,1.1,1.1],\n",
@@ -471,17 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 142,
    "id": "78649d3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "mgnn = {\n",
-    "    # 'rMD17': {\n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.071,0.053,0.001,0.007,0.018,0.012,0.055,0.030,0.009,0.009],\n",
-    "    #     'F': [0.210,0.143,0.005,0.062,0.118,0.060,0.157,0.148,0.055,0.062]\n",
-    "    # }\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [3.1,2.3,0.03,0.3,0.8,0.5,2.4,1.3,0.4,0.4],\n",
@@ -492,7 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 143,
+   "id": "0248a4f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visnet = {\n",
+    "    'MD17': {\n",
+    "        'unit': 'kcal',\n",
+    "        'E': [0.116,'x',0.051,0.075,0.085,0.092,0.074,0.095],\n",
+    "        'F': [0.155,'x',0.060,0.100,0.039,0.084,0.039,0.062]\n",
+    "    },\n",
+    "    'rMD17': {\n",
+    "        'unit': 'kcal',\n",
+    "        'E': [0.0445,0.0156,0.0007,0.0078,0.0132,0.0057,0.0258,0.0161,0.0059,0.0069],\n",
+    "        'F': [0.1520,0.0585,0.0056,0.0522,0.0893,0.0291,0.1029,0.0795,0.0264,0.0495]\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "id": "0ebb04e0",
    "metadata": {},
    "outputs": [],
@@ -519,7 +443,8 @@
     "    ['GAP(SOAP)',gap_soap],\n",
     "    ['sGDML',sgdml],\n",
     "    ['ACE',ace],\n",
-    "    ['MGNN',mgnn]\n",
+    "    ['MGNN',mgnn],\n",
+    "    ['ViSNet',visnet],\n",
     "]"
    ]
   },
@@ -533,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 145,
    "id": "10cbd3cb",
    "metadata": {},
    "outputs": [],
@@ -601,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 146,
    "id": "cd0d460d",
    "metadata": {},
    "outputs": [],
@@ -657,33 +582,6 @@
     "df.index = ['Aspirin','Azobenzene','Benzene','Ethanol','Malonaldehyde','Naphthalene','Paracetamol','Salicylic_Acid','Toluene','Uracil']\n",
     "df.index.name = \"rMD17_molecules\"\n",
     "df.to_csv(\"rMD17_Force.csv\", index=True) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d91fee9",
-   "metadata": {},
-   "source": [
-    "For QM9 dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "8fce0735",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data = {} \n",
-    "\n",
-    "# for ml in framework_MD17:  \n",
-    "#     if 'QM9' in ml[1]:\n",
-    "#         data[ml[0]] = ml[1]['QM9']['mae']\n",
-    "\n",
-    "# df = pd.DataFrame(data)\n",
-    "# df.index = ['μ','α ','HOMO','LUMO','∆','<R2>','ZPVE','U0','U','H','G','cv']\n",
-    "# df.index.name = \"QM9_properties\"\n",
-    "# df.to_csv(\"QM9.csv\", index=True)"
    ]
   },
   {
