--- a/plots/plot_NequIP_l.ipynb
+++ b/plots/plot_NequIP_l.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "88408241",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "0eec1645",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,7 @@
        "      <th>sGDML</th>\n",
        "      <th>ACE</th>\n",
        "      <th>MGNN</th>\n",
+       "      <th>ViSNet</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -67,6 +68,7 @@
        "      <td>0.166</td>\n",
        "      <td>0.141</td>\n",
        "      <td>0.071</td>\n",
+       "      <td>0.0445</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -82,6 +84,7 @@
        "      <td>0.099</td>\n",
        "      <td>0.083</td>\n",
        "      <td>0.053</td>\n",
+       "      <td>0.0156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -97,6 +100,7 @@
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
+       "      <td>0.0007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -112,6 +116,7 @@
        "      <td>0.055</td>\n",
        "      <td>0.028</td>\n",
        "      <td>0.007</td>\n",
+       "      <td>0.0078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -127,6 +132,7 @@
        "      <td>0.071</td>\n",
        "      <td>0.039</td>\n",
        "      <td>0.018</td>\n",
+       "      <td>0.0132</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -140,15 +146,15 @@
        "3         Ethanol        0.046        0.023        0.012        0.009  0.009   \n",
        "4   Malonaldehyde        0.101        0.037        0.021        0.018  0.018   \n",
        "\n",
-       "   Allegro  FCHL19  GAP(SOAP)  sGDML    ACE   MGNN  \n",
-       "0    0.053   0.143      0.408  0.166  0.141  0.071  \n",
-       "1    0.028   0.065      0.196  0.099  0.083  0.053  \n",
-       "2    0.007   0.008      0.017  0.001  0.001  0.001  \n",
-       "3    0.009   0.021      0.081  0.055  0.028  0.007  \n",
-       "4    0.014   0.035      0.111  0.071  0.039  0.018  "
+       "   Allegro  FCHL19  GAP(SOAP)  sGDML    ACE   MGNN  ViSNet  \n",
+       "0    0.053   0.143      0.408  0.166  0.141  0.071  0.0445  \n",
+       "1    0.028   0.065      0.196  0.099  0.083  0.053  0.0156  \n",
+       "2    0.007   0.008      0.017  0.001  0.001  0.001  0.0007  \n",
+       "3    0.009   0.021      0.081  0.055  0.028  0.007  0.0078  \n",
+       "4    0.014   0.035      0.111  0.071  0.039  0.018  0.0132  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "277effe3",
    "metadata": {},
    "outputs": [],
@@ -173,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "a77b4ddd",
    "metadata": {},
    "outputs": [
@@ -210,6 +216,7 @@
        "      <th>sGDML</th>\n",
        "      <th>ACE</th>\n",
        "      <th>MGNN</th>\n",
+       "      <th>ViSNet</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -227,6 +234,7 @@
        "      <td>0.733</td>\n",
        "      <td>0.413</td>\n",
        "      <td>0.210</td>\n",
+       "      <td>0.1520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -242,6 +250,7 @@
        "      <td>0.443</td>\n",
        "      <td>0.251</td>\n",
        "      <td>0.143</td>\n",
+       "      <td>0.0585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -257,6 +266,7 @@
        "      <td>0.018</td>\n",
        "      <td>0.012</td>\n",
        "      <td>0.005</td>\n",
+       "      <td>0.0056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -272,6 +282,7 @@
        "      <td>0.369</td>\n",
        "      <td>0.168</td>\n",
        "      <td>0.062</td>\n",
+       "      <td>0.0522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -287,6 +298,7 @@
        "      <td>0.434</td>\n",
        "      <td>0.256</td>\n",
        "      <td>0.118</td>\n",
+       "      <td>0.0893</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -300,15 +312,15 @@
        "3         Ethanol        0.274        0.150        0.081        0.065  0.048   \n",
        "4   Malonaldehyde        0.535        0.238        0.136        0.118  0.095   \n",
        "\n",
-       "   Allegro  FCHL19  GAP(SOAP)  sGDML    ACE   MGNN  \n",
-       "0    0.168   0.482      1.035  0.733  0.413  0.210  \n",
-       "1    0.060   0.249      0.565  0.443  0.251  0.143  \n",
-       "2    0.005   0.060      0.138  0.018  0.012  0.005  \n",
-       "3    0.048   0.143      0.417  0.369  0.168  0.062  \n",
-       "4    0.083   0.238      0.609  0.434  0.256  0.118  "
+       "   Allegro  FCHL19  GAP(SOAP)  sGDML    ACE   MGNN  ViSNet  \n",
+       "0    0.168   0.482      1.035  0.733  0.413  0.210  0.1520  \n",
+       "1    0.060   0.249      0.565  0.443  0.251  0.143  0.0585  \n",
+       "2    0.005   0.060      0.138  0.018  0.012  0.005  0.0056  \n",
+       "3    0.048   0.143      0.417  0.369  0.168  0.062  0.0522  \n",
+       "4    0.083   0.238      0.609  0.434  0.256  0.118  0.0893  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "f486d017",
    "metadata": {},
    "outputs": [],
@@ -333,40 +345,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "f60ffef7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors = {\n",
-    "    'SchNet':      '#1f77b4',  # muted blue\n",
-    "    'DimeNet':     '#d62728',  # safety orange\n",
-    "    'PhysNet':     '#8c6d31',  # cooked asparagus green\n",
-    "    'GemNet(Q)':   '#843c39',  # brick red\n",
-    "    'GemNet(T)':   'orange',   #'#8c564b',  # muted purple\n",
-    "    'PaiNN(F)':    '#5254a3',  # chestnut brown\n",
-    "    'PaiNN(F+E)':  '#7f7f7f',  # raspberry yogurt pink\n",
-    "    'ENINet':      '#e377c2',  # middle gray\n",
-    "    'SpookyNet':   '#bcbd22',  # curry yellow-green\n",
-    "    'NequIP(l=0)': '#2ca02c',  # blue-teal\n",
-    "    'NequIP(l=1)': '#393b79',  # dark muted blue\n",
-    "    'NequIP(l=2)': 'red',      # '637939',  # olive green\n",
-    "    'NequIP(l=3)': '#17becf',  # dark mustard\n",
-    "    'MACE':        '#ff7f0e',  # dark brick red\n",
-    "    'NewtonNet':   '#7b4173',  # dark purple\n",
-    "    'Allegro':     '#9467bd',  # soft blue\n",
-    "    'SO3krates':   '#6b6ecf',  # soft purple\n",
-    "    'FCHL19':      '#9c9ede',  # light lavender\n",
-    "    'GAP(SOAP)':   '#8ca252',  # light olive green\n",
-    "    'sGDML':       '#b5cf6b',  # pastel green\n",
-    "    'ACE':         'violet',   #\n",
-    "    'MGNN':        'black',    #\n",
-    "}"
+    "label_colors = {\n",
+    "    'SchNet':      ['SchNet'         ,'#1f77b4'],  # muted blue\n",
+    "    'DimeNet':     ['DimeNet'        ,'#d62728'],  # safety orange\n",
+    "    'PhysNet':     ['PhysNet'        ,'#8c6d31'],  # cooked asparagus green\n",
+    "    'GemNet(Q)':   ['GemNet (Q)'     ,'#843c39'],  # brick red\n",
+    "    'GemNet(T)':   ['GemNet (T)'     ,'orange' ],  #\n",
+    "    'PaiNN(F)':    ['PaiNN (F)'      ,'#5254a3'],  # chestnut brown\n",
+    "    'PaiNN(F+E)':  ['PaiNN (F+E)'    ,'#7f7f7f'],  # raspberry yogurt pink\n",
+    "    'ENINet':      ['ENINet'         ,'#e377c2'],  # middle gray\n",
+    "    'SpookyNet':   ['SpookyNet'      ,'#bcbd22'],  # curry yellow-green\n",
+    "    'NequIP(l=0)': ['NequIP ($l=0$)' ,'#2ca02c'],  # blue-teal\n",
+    "    'NequIP(l=1)': ['NequIP ($l=1$)' ,'#393b79'],  # dark muted blue\n",
+    "    'NequIP(l=2)': ['NequIP ($l=2$)' ,'red'    ],  #\n",
+    "    'NequIP(l=3)': ['NequIP ($l=3$)' ,'#17becf'],  # dark mustard\n",
+    "    'MACE':        ['MACE'           ,'#ff7f0e'],  # dark brick red\n",
+    "    'NewtonNet':   ['NewtonNet'      ,'#7b4173'],  # dark purple\n",
+    "    'Allegro':     ['Allegro'        ,'#9467bd'],  # soft blue\n",
+    "    'SO3krates':   ['SO3krates'      ,'#6b6ecf'],  # soft purple\n",
+    "    'FCHL19':      ['FCHL19'         ,'#9c9ede'],  # light lavender\n",
+    "    'GAP(SOAP)':   ['GAP(SOAP)'      ,'#8ca252'],  # light olive green\n",
+    "    'sGDML':       ['sGDML'          ,'#b5cf6b'],  # pastel green\n",
+    "    'ACE':         ['ACE'            ,'violet' ], #\n",
+    "    'MGNN':        ['MGNN'           ,'black'  ], #\n",
+    "    'ViSNet':      ['ViSNet'         ,'cyan'   ], #\n",
+    "} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "8b2fa2b3",
    "metadata": {},
    "outputs": [
@@ -388,15 +401,15 @@
     "\n",
     "x = [0,1,2,3,4,5,6,7,8,9]\n",
     "\n",
-    "ax.plot(l0_E,label='NequIP ($l=0$)',color=colors['NequIP(l=0)'])\n",
-    "ax.plot(l1_E,label='NequIP ($l=1$)',color=colors['NequIP(l=1)'])\n",
-    "ax.plot(l2_E,label='NequIP ($l=2$)',color=colors['NequIP(l=2)'])\n",
-    "ax.plot(l3_E,label='NequIP ($l=3$)',color=colors['NequIP(l=3)'])\n",
+    "ax.plot(l0_E,label='NequIP ($l=0$)',color=label_colors['NequIP(l=0)'][1])\n",
+    "ax.plot(l1_E,label='NequIP ($l=1$)',color=label_colors['NequIP(l=1)'][1])\n",
+    "ax.plot(l2_E,label='NequIP ($l=2$)',color=label_colors['NequIP(l=2)'][1])\n",
+    "ax.plot(l3_E,label='NequIP ($l=3$)',color=label_colors['NequIP(l=3)'][1])\n",
     "\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l0_E,color=colors['NequIP(l=0)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l1_E,color=colors['NequIP(l=1)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l2_E,color=colors['NequIP(l=2)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l3_E,color=colors['NequIP(l=3)'],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l0_E,color=label_colors['NequIP(l=0)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l1_E,color=label_colors['NequIP(l=1)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l2_E,color=label_colors['NequIP(l=2)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l3_E,color=label_colors['NequIP(l=3)'][1],s=20)\n",
     "\n",
     "ax.set_ylabel('Energy MAEs [kcal/mol]')\n",
     "\n",
@@ -415,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "931d83a0",
    "metadata": {},
    "outputs": [
@@ -435,15 +448,15 @@
     "\n",
     "x = [0,1,2,3,4,5,6,7,8,9]\n",
     "\n",
-    "ax.plot(l0_F,label='NequIP ($l=0$)',color=colors['NequIP(l=0)'])\n",
-    "ax.plot(l1_F,label='NequIP ($l=1$)',color=colors['NequIP(l=1)'])\n",
-    "ax.plot(l2_F,label='NequIP ($l=2$)',color=colors['NequIP(l=2)'])\n",
-    "ax.plot(l3_F,label='NequIP ($l=3$)',color=colors['NequIP(l=3)'])\n",
+    "ax.plot(l0_F,label='NequIP ($l=0$)',color=label_colors['NequIP(l=0)'][1])\n",
+    "ax.plot(l1_F,label='NequIP ($l=1$)',color=label_colors['NequIP(l=1)'][1])\n",
+    "ax.plot(l2_F,label='NequIP ($l=2$)',color=label_colors['NequIP(l=2)'][1])\n",
+    "ax.plot(l3_F,label='NequIP ($l=3$)',color=label_colors['NequIP(l=3)'][1])\n",
     "\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l0_F,color=colors['NequIP(l=0)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l1_F,color=colors['NequIP(l=1)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l2_F,color=colors['NequIP(l=2)'],s=20)\n",
-    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l3_F,color=colors['NequIP(l=3)'],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l0_F,color=label_colors['NequIP(l=0)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l1_F,color=label_colors['NequIP(l=1)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l2_F,color=label_colors['NequIP(l=2)'][1],s=20)\n",
+    "ax.scatter([0,1,2,3,4,5,6,7,8,9],l3_F,color=label_colors['NequIP(l=3)'][1],s=20)\n",
     "\n",
     "ax.set_ylabel('Force MAEs [kcal/mol/$\\\\AA$]')\n",
     "\n",
