--- a/csvs/make_csv.ipynb
+++ b/csvs/make_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "5c1db941",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "48d1f097",
    "metadata": {},
    "outputs": [],
    "source": [
-    "schnet = { # Train on both\n",
+    "schnet = { #Trained on both energies and forces\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': [0.37,0.08,0.08,0.13,0.16,0.20,0.12,0.14],\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "c5a53677",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "id": "edc9c42f",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "id": "be580a02",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "id": "bc698795",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,6 @@
     "    'MD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': ['x','x','x','x','x','x','x','x'],\n",
-    "        # 'F': [0.217,'x','x',0.088,0.159,0.051,'x',0.125,0.060,0.104]\n",
     "        'F': [9.4,6.3,3.8,6.9,2.2,5.4,2.6,4.5]\n",
     "    }\n",
     "}\n",
@@ -132,7 +131,6 @@
     "    'MD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': ['x','x','x','x','x','x','x','x'],\n",
-    "        # 'F': [0.219,'x','x',0.085,0.155,0.055,'x',0.127,0.060,0.097]\n",
     "        'F': [9.5,6.3,3.7,6.7,2.4,5.5,2.6,4.2]\n",
     "    }\n",
     "}"
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "id": "81897487",
    "metadata": {},
    "outputs": [],
@@ -153,7 +151,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "painn_force_energy = { #Trained on both both energies and forces\n",
+    "painn_force_energy = { #Trained on both energies and forces\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': [0.159,'x',0.063,0.091,0.117,0.114,0.097,0.104],\n",
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "id": "3d0df0d5",
    "metadata": {},
    "outputs": [],
@@ -180,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "id": "e21d7b46",
    "metadata": {},
    "outputs": [],
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "id": "7b0f39a3",
    "metadata": {},
    "outputs": [],
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "id": "ee4138f8",
    "metadata": {},
    "outputs": [],
@@ -257,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "id": "5d5451b0",
    "metadata": {},
    "outputs": [],
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "id": "35b3a4c7",
    "metadata": {},
    "outputs": [],
@@ -289,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "id": "91e7c7c0",
    "metadata": {},
    "outputs": [],
@@ -305,28 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "id": "bf444f4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "fchl_19 = {\n",
-    "    # 'MD17': { # Reference \n",
-    "    #     'unit': 'kcal',\n",
-    "    #     'E': [0.182,'x','x',0.054,0.081,0.117,'x',0.114,0.098,0.104],\n",
-    "    #     'F': [0.478,'x','x',0.136,0.245,0.151,'x',0.221,0.203,0.105]\n",
-    "    # },\n",
-    "    'rMD17': { # original paper ?\n",
+    "    'rMD17': { \n",
     "        'unit': 'meV',\n",
     "        'E': [ 6.2, 2.8,0.35,0.9, 1.5,1.2, 2.9,1.8,1.7,0.6],\n",
     "        'F': [20.9,10.8,2.6, 6.2,10.3,6.5,12.3,9.5,8.8,4.2]\n",
     "    }\n",
-    "} "
+    "} \n",
+    "\n",
+    "# Numerical values are taken from ACE paper."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "id": "72164cfa",
    "metadata": {},
    "outputs": [],
@@ -342,28 +337,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 18,
    "id": "44b1ca4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "sgdml = {\n",
-    "    'MD17': { # original paper ?\n",
+    "    'MD17': { \n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.19,0.092,0.07,0.10,0.12,0.12,0.10,0.11],\n",
-    "        'F': [0.68,0.409,0.33,0.41,0.11,0.28,0.14,0.24]\n",
+    "        'E': [0.19,0.10,0.07,0.10,0.12,0.12,0.10,0.11],\n",
+    "        'F': [0.68,0.06,0.33,0.41,0.11,0.28,0.14,0.24]\n",
     "    },\n",
     "    'rMD17': {\n",
     "        'unit': 'meV',\n",
     "        'E': [ 7.2, 4.3,0.06, 2.4, 3.1,0.8, 5.0, 2.1,1.0, 1.4],\n",
     "        'F': [31.8,19.2,0.8, 16.0,18.8,5.4,23.3,12.8,6.3,10.4]\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "# MD17 data taken from DimeNet paper.\n",
+    "# MD17 data taken from ACE paper."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 19,
    "id": "188ac224",
    "metadata": {},
    "outputs": [],
@@ -379,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 20,
    "id": "78649d3e",
    "metadata": {},
    "outputs": [],
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "id": "0248a4f7",
    "metadata": {},
    "outputs": [],
@@ -416,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "id": "0ebb04e0",
    "metadata": {},
    "outputs": [],
@@ -458,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 23,
    "id": "10cbd3cb",
    "metadata": {},
    "outputs": [],
@@ -526,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 24,
    "id": "cd0d460d",
    "metadata": {},
    "outputs": [],
